--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/funcionarios/components/ListFuncionarios.tsx", "src/app/cargos/components/ListCargos.tsx", ".next/types/app/funcionarios/page.tsx"],
   "exclude": ["node_modules"]
 }
