--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-input/mask": "^1.0.20",
     "axios": "^1.6.2",
+    "gerador-validador-cpf": "^5.0.2",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
